# mephi-master-sem3-media-processing

./: README.md
lab_01/: main.py  pyproject.toml  tools.py
lab_02/: main.py  pyproject.toml  tools.py
lab_03/: main.py  pyproject.toml  tools.py
lab_04/: main.py  pyproject.toml  tools.py
lab_05/: image_generator.py  main.py  pyproject.toml
lab_08/: main.py  pyproject.toml  tools.py
lab_09/: main.py  pyproject.toml
lab_09/utils/: noise_generator.py
lab_10/: main.py  pyproject.toml
